DuPont DevSB/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Suspend_Team_Go_ahead_Destination_Kevla__c</fullName>
        <label>Suspend Team/ Go-ahead Destination Kevla</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Work_for_Kevlar__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Cuba</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Iran</fullName>
                </value>
                <value>
                    <fullName>Iraq</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Kuwait</fullName>
                </value>
                <value>
                    <fullName>Libya</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Myanmar</fullName>
                </value>
                <value>
                    <fullName>Nigeria</fullName>
                </value>
                <value>
                    <fullName>North Korea</fullName>
                </value>
                <value>
                    <fullName>Pakistan</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Slovenia</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserOwningSBUOrg__c</fullName>
        <description>Strategic Business Unit responsible for this User</description>
        <label>User Owning SBU Org</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Account__c</fullName>
        <formula>Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User.Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Area_ID__c</fullName>
        <description>Unique user identification number used for integration with other systems</description>
        <label>User Area ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Country__c</fullName>
        <description>Primary country this User belongs to</description>
        <label>User Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BOUVET ISLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_District__c</fullName>
        <label>User District</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>406 - Southeast</fullName>
                </value>
                <value>
                    <fullName>411 - Florida</fullName>
                </value>
                <value>
                    <fullName>417 - Pacific NW</fullName>
                </value>
                <value>
                    <fullName>419 - S. California</fullName>
                </value>
                <value>
                    <fullName>420 - N. California</fullName>
                </value>
                <value>
                    <fullName>421 - Southwest</fullName>
                </value>
                <value>
                    <fullName>446 - Chicago</fullName>
                </value>
                <value>
                    <fullName>447 - Texas</fullName>
                </value>
                <value>
                    <fullName>449 - Kansas City</fullName>
                </value>
                <value>
                    <fullName>451 - St Louis</fullName>
                </value>
                <value>
                    <fullName>466 - Boston</fullName>
                </value>
                <value>
                    <fullName>467 - Detroit</fullName>
                </value>
                <value>
                    <fullName>468 - Lionville</fullName>
                </value>
                <value>
                    <fullName>635 - NY/NJ</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Auto Auction</fullName>
                </value>
                <value>
                    <fullName>AV/MAR-LQ</fullName>
                </value>
                <value>
                    <fullName>BDT</fullName>
                </value>
                <value>
                    <fullName>CA-C-EC</fullName>
                </value>
                <value>
                    <fullName>CA-C-LQ</fullName>
                </value>
                <value>
                    <fullName>CA-C-PW</fullName>
                </value>
                <value>
                    <fullName>CA-E-EC</fullName>
                </value>
                <value>
                    <fullName>CA-E-LQ</fullName>
                </value>
                <value>
                    <fullName>CA-E-PW</fullName>
                </value>
                <value>
                    <fullName>CA-W-EC</fullName>
                </value>
                <value>
                    <fullName>CA-W-LQ</fullName>
                </value>
                <value>
                    <fullName>CA-W-PW</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>E Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Grouping__c</fullName>
        <description>DuPont Business</description>
        <inlineHelpText>DuPont Business (abbrev)</inlineHelpText>
        <label>User Grouping</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>CORP</fullName>
                </value>
                <value>
                    <fullName>DC&amp;F</fullName>
                </value>
                <value>
                    <fullName>DPM</fullName>
                </value>
                <value>
                    <fullName>DPS</fullName>
                </value>
                <value>
                    <fullName>DPT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_ID_IOS__c</fullName>
        <externalId>true</externalId>
        <label>User ID IOS</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Owning_Org__c</fullName>
        <description>Primary &quot;Owning Organisation&quot; this user belongs to</description>
        <label>User Owning Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BI-Env</fullName>
                </value>
                <value>
                    <fullName>BI-Surf</fullName>
                </value>
                <value>
                    <fullName>CORP</fullName>
                </value>
                <value>
                    <fullName>CORP-CS</fullName>
                </value>
                <value>
                    <fullName>DPT-AFS-ES</fullName>
                </value>
                <value>
                    <fullName>DPT-AFS-PM</fullName>
                </value>
                <value>
                    <fullName>DPT-AFS-PS</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids</fullName>
                </value>
                <value>
                    <fullName>DPT-Automotive</fullName>
                </value>
                <value>
                    <fullName>DPT-Car Protection</fullName>
                </value>
                <value>
                    <fullName>DPT-IPP</fullName>
                </value>
                <value>
                    <fullName>DPT-NOW</fullName>
                </value>
                <value>
                    <fullName>FIN</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IAL</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>LEGL</fullName>
                </value>
                <value>
                    <fullName>M&amp;S-Corp Marketing</fullName>
                </value>
                <value>
                    <fullName>M&amp;S-Customer Care</fullName>
                </value>
                <value>
                    <fullName>M&amp;S-IT</fullName>
                </value>
                <value>
                    <fullName>DPP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Ref_ID__c</fullName>
        <description>Auto-Generated User Identity and Access Management Id for Partner Community user identification. Map to E-Pass ID on User.</description>
        <displayFormat>PS{000000}</displayFormat>
        <label>User Ref ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>User_Region__c</fullName>
        <label>User Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <description>This field will help to differentiate the type of License - DuPont or Trading Partner</description>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DuPont</fullName>
                    <default>true</default>
                    <label>DuPont</label>
                </value>
                <value>
                    <fullName>Trading Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_for_Kevlar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work for Kevlar?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__CC_CurrencyCode__c</fullName>
        <description>Customized Currency field for Orgs which don&apos;t have  Multi-currency feautre.</description>
        <label>Currency</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CompanyType__c</fullName>
        <label>CompanyType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ISP</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__ContactTypeRole__c</fullName>
        <description>CloudCraze contact type role</description>
        <label>Contact Type Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Researcher/Post Doc</fullName>
                    <default>true</default>
                    <label>Researcher/Post Doc</label>
                </value>
                <value>
                    <fullName>Purchasing Agent</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Lab Manager</fullName>
                </value>
                <value>
                    <fullName>Department Chair</fullName>
                </value>
                <value>
                    <fullName>Principal Investigator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the current user gets qualified for the tax-exempt</description>
        <label>Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__User_Industry__c</fullName>
        <description>CloudCraze user industry</description>
        <label>User Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic research</fullName>
                    <default>true</default>
                    <label>Academic research</label>
                </value>
                <value>
                    <fullName>commercial</fullName>
                </value>
                <value>
                    <fullName>government</fullName>
                </value>
                <value>
                    <fullName>OEM-Reseller</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__User_Salutation__c</fullName>
        <description>CloudCraze user salutation</description>
        <label>User Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr</fullName>
                    <default>true</default>
                    <label>Mr</label>
                </value>
                <value>
                    <fullName>Mrs</fullName>
                </value>
                <value>
                    <fullName>Ms</fullName>
                </value>
                <value>
                    <fullName>Dr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFMembershipStatus__c</fullName>
        <label>DSProSFMembershipStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFPassword__c</fullName>
        <label>DSProSFPassword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFUsername__c</fullName>
        <description>DocuSign username</description>
        <label>DSProSFUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__AllowMapAnythingExports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow MapAnything Exports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__DefaultProximityRadius__c</fullName>
        <label>Default Proximity Radius</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__EditMapAnythingOrgWirdeQueries__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit MapAnything Org Wide Queries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__MABetaTester__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MapAnything Beta Tester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__MADefaultLatitude__c</fullName>
        <label>MapAnything Default Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MADefaultLongitude__c</fullName>
        <label>MapAnything Default Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MADefaultType__c</fullName>
        <label>MADefaultType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MADefaultZoomLevel__c</fullName>
        <label>MapAnything Default Zoom Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MAMaxExportSize__c</fullName>
        <label>MapAnything Max Export Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MAMaxQuerySize__c</fullName>
        <label>MapAnything Max Query Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MAVersion__c</fullName>
        <label>MapAnything Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Previous</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Beta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__MapAnythingSettings__c</fullName>
        <label>Map Anything Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__PreferredTypeOfMeasurement__c</fullName>
        <label>Preferred Type of Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Miles</fullName>
                </value>
                <value>
                    <fullName>Km</fullName>
                </value>
                <value>
                    <fullName>Meters</fullName>
                </value>
                <value>
                    <fullName>Yards</fullName>
                </value>
                <value>
                    <fullName>Feet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__ReceiveBatchExceptionEmails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive Batch Exception Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__TestUserLookup__c</fullName>
        <description>For blueline bug.</description>
        <label>TestUserLookup</label>
        <relationshipName>TestChildLookup</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BIAll2</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>User_Country__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>User_Region__c</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>AccessType__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_DATE</columns>
        <columns>EPass_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Region__c</field>
            <operation>equals</operation>
            <value>AP</value>
        </filters>
        <label>BI (All)</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>BuildingInnovations</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_AP</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>User_Country__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>User_Region__c</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>AccessType__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_DATE</columns>
        <columns>EPass_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Owning_Org__c</field>
            <operation>startsWith</operation>
            <value>BI</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>notContain</operation>
            <value>EMEA</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>EMEA</value>
        </filters>
        <label>BI NON-EMEA</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>BuildingInnovations</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_AP_All</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>User_Country__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>User_Region__c</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>AccessType__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>BI-China</value>
        </filters>
        <label>BI - China (All)</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>BuildingInnovations</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_Active_Users_All</fullName>
        <booleanFilter>1 AND (2 or 3)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>User_Country__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>User_Region__c</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>AccessType__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_DATE</columns>
        <columns>EPass_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Owning_Org__c</field>
            <operation>startsWith</operation>
            <value>BI</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>BI Active &amp; Inactive Users (All)</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>BuildingInnovations</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_EMEA</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>User_Country__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>User_Region__c</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>AccessType__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_DATE</columns>
        <columns>EPass_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Owning_Org__c</field>
            <operation>startsWith</operation>
            <value>BI</value>
        </filters>
        <filters>
            <field>User_Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <label>BI-EMEA</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>BuildingInnovations</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_EMEA_Active</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>User_Country__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>User_Region__c</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>AccessType__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_DATE</columns>
        <columns>EPass_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Owning_Org__c</field>
            <operation>startsWith</operation>
            <value>BI</value>
        </filters>
        <filters>
            <field>User_Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>BI-EMEA (Active)</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>BuildingInnovations</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_India_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Country__c</field>
            <operation>equals</operation>
            <value>INDIA</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>contains</operation>
            <value>BI</value>
        </filters>
        <label>BI India Users</label>
        <language>en_US</language>
        <sharedTo>
            <group>APEngagementLeader</group>
            <role>BIAP</role>
            <role>BIIndia</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_LA_M_xico</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ADDRESS_COUNTRY</field>
            <operation>equals</operation>
            <value>Mexico</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>BI-LA</value>
        </filters>
        <label>BI-LA-México</label>
        <language>en_US</language>
        <sharedTo>
            <role>BILA</role>
        </sharedTo>
    </listViews>
</CustomObject>